--- a/.github/workflows/_add_release_update_changelog.yml
+++ b/.github/workflows/_add_release_update_changelog.yml
@@ -12,31 +12,31 @@ on:
         type: string
 
 jobs:
-  create_new_version:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Get tag
-        id: vars
-        run: echo "tag=$(echo "${{ inputs.tag_name }}" | awk -F'/v' '{print $2}')" >> $GITHUB_OUTPUT
-      - name: Post New Version to API
-        run: |
-          RESPONSE=$(curl -s -w "\n%{http_code}" --request POST \
-            --url https://api.sprig.com/internal/2/sdkRelease \
-            --header 'Authorization: Bearer ${{ secrets.PROD_API_KEY }}' \
-            --header 'Content-Type: application/json' \
-            --data "{ \"timestamp\": $(date +%s000), \"platform\": \"ios\", \"version\": \"${{ steps.vars.outputs.tag }}\" }")
+  # create_new_version:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Get tag
+  #       id: vars
+  #       run: echo "tag=$(echo "${{ inputs.tag_name }}" | awk -F'/v' '{print $2}')" >> $GITHUB_OUTPUT
+  #     - name: Post New Version to API
+  #       run: |
+  #         RESPONSE=$(curl -s -w "\n%{http_code}" --request POST \
+  #           --url https://api.sprig.com/internal/2/sdkRelease \
+  #           --header 'Authorization: Bearer ${{ secrets.PROD_API_KEY }}' \
+  #           --header 'Content-Type: application/json' \
+  #           --data "{ \"timestamp\": $(date +%s000), \"platform\": \"ios\", \"version\": \"${{ steps.vars.outputs.tag }}\" }")
 
-          HTTP_STATUS=$(echo "$RESPONSE" | tail -n1)
-          BODY=$(echo "$RESPONSE" | head -n -1)
+  #         HTTP_STATUS=$(echo "$RESPONSE" | tail -n1)
+  #         BODY=$(echo "$RESPONSE" | head -n -1)
 
-          echo "HTTP Status: $HTTP_STATUS"
-          echo "Response Body: $BODY"
+  #         echo "HTTP Status: $HTTP_STATUS"
+  #         echo "Response Body: $BODY"
 
-          if [[ "$HTTP_STATUS" != "200" ]]; then
-            echo "API call failed, issue with updating SdkVersion in postgres"
-            exit 1
-          fi
+  #         if [[ "$HTTP_STATUS" != "200" ]]; then
+  #           echo "API call failed, issue with updating SdkVersion in postgres"
+  #           exit 1
+  #         fi
 
   update_readme_docs:
     runs-on: ubuntu-latest
