--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
+name: Main Release
 on:
   push:
     branches:
-      - 'main'
+      - "main"
 
 jobs:
   make-release:
@@ -10,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.GH_TOKEN }}
-      
+
       - name: Get Version
         id: get-version
         run: echo "version=$(grep -o "[0-9]\+\.[0-9]\+\.[0-9]\+" UserLeapKit.podspec)" >> $GITHUB_OUTPUT
@@ -22,6 +23,6 @@ jobs:
         run: bash ./scripts/tag-and-release.sh release ${{ secrets.GH_TOKEN }} ${{ steps.get-version.outputs.version }}
 
       - name: Push to Cocoapod
-        env: 
+        env:
           COCOAPODS_TRUNK_TOKEN: ${{ secrets.POD_TRUNK_TOKEN }}
         run: pod trunk push UserLeapKit.podspec
